[package]
name = "grex_t0"
version = "0.5.0"
edition = "2021"

[dependencies]
casperfpga = "0.2"
casperfpga_derive = "0.2"
clap = { version = "4", features = ["derive"] }
fixed = "1"
actix-web = "4"
prometheus = "0.13"
ndarray = "0.15"
num-complex = "0.4"
regex = "1"
rsntp = "4"
socket2 = "0.5"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
core_affinity = "0.8"
psrdada = "0.4"
byte-slice-cast = "1"
thingbuf = { version = "0.1", features = ["static"] }
arrayvec = "0.7"
sigproc_filterbank = "0.4"
hifitime = "3"
memmap2 = "0.9"
eyre = "0.6"
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
whittaker_smoother = "0.1"
median = "0.3"
netcdf = "0.9"
paste = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[patch.crates-io]
# Once a new release of hdf5 is pushed, and netcdf follows, this can be removed
hdf5-sys = { git = "https://github.com/aldanor/hdf5-rust" }

[lib]
name = "grex_t0"
path = "src/lib.rs"

[[bin]]
name = "grex_t0"
path = "src/main.rs"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
debug = 1
panic = "abort"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"
