[package]
name = "grex_t0"
version = "0.7.0"
edition = "2021"

[dependencies]
# Runtime
tokio = { version = "1", features = ["full"] }
core_affinity = "0.8"

# CLI Tools
clap = { version = "4", features = ["derive"] }
regex = "1"

# FPGA And Packet Capture
casperfpga = "0.2"
casperfpga_derive = "0.2"
fixed = "1"
socket2 = "0.5"

# Math
num-complex = "0.4"
ndarray = "0.15"

# Time
hifitime = "3"
rsntp = "4"

# Macros
paste = "1"
serde = { version = "1", features = ["derive"] }

# Triggering
serde_json = "1"

# Exfil and Dumps
sigproc_filterbank = "0.4"
psrdada = "0.4"
byte-slice-cast = "1"
netcdf = "0.9"

# Error Handling
eyre = "0.6"
color-eyre = "0.6"
thiserror = "1"

# Logging Support
rusqlite = { version = "0.31", features = ["bundled"] }
actix-web = "4"
tracing-actix-web = { version = "0.7", features = ["opentelemetry_0_22"] }
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = "0.22"
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio-current-thread"] }
opentelemetry-otlp = { version = "0.15", features = ["logs"] }
tracing-opentelemetry = "0.23"
opentelemetry-semantic-conventions = "0.14"
opentelemetry-appender-tracing = "0.3"

# Misc
thingbuf = { version = "0.1", features = ["static"] }
arrayvec = "0.7"
memmap2 = "0.9"
pulp = "0.18"

[patch.crates-io]
# Once a new release of hdf5 is pushed, and netcdf follows, this can be removed
hdf5-sys = { git = "https://github.com/aldanor/hdf5-rust" }

[lib]
name = "grex_t0"
path = "src/lib.rs"

[[bin]]
name = "grex_t0"
path = "src/main.rs"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
debug = 1
panic = "abort"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"
